4rd fix: trivial

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </div>
         <div class="button-area">
             <button class="google-button">Google Search</button>
-            <button class="google-button">I'm feeling lucky</button>
+            <button class="google-button">I'm Feeling Lucky</button>
         </div>
 
         <div>
             Google offered in:
             <a class="language" href="">Tiếng Việt</a>
             <a class="language" href="">Français</a>
-            <a class="language" href="">中文（繁體</a>
+            <a class="language" href="">中文（繁體)</a>
 
         </div>
 
